--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Bookshelf Apps</title>
         <style type="text/tailwindcss">
             @layer utilities {
-              .container {
+              .box {
                 display: flex;
                 flex-direction: column;
               }
@@ -18,19 +18,19 @@
             }
         </style>
     </head>
-    <body>
+    <body onload="getAllBooks()">
         <!-- Header -->
-        <div class="container w-full py-4 bg-purple-700 text-center">
+        <div class="w-full py-4 bg-purple-700 text-center">
             <h1 class="text-white font-semibold text-xl md:text-2xl">Bookshelf Apps</h1>
         </div>
 
         <!-- Content -->
-        <div class="container justify-center m-auto w-96">
+        <div class="box justify-center m-auto w-96">
             <!-- Form Input Section-->
-            <div class="container w-full  mt-6">
+            <div class="box w-full  mt-6">
                 <!-- Form Input -->
-                <form class="container w-full items-center gap-y-4">
-                    <div class="container  gap-y-2">
+                <form oninput="formChangeHandler()" class="box w-full items-center gap-y-4">
+                    <div class="box w-full gap-y-2">
                         <label class="text-base text-purple-700 font-semibold"> Judul Buku</label>
                         <input
                             required
@@ -41,7 +41,7 @@
                         />
                     </div>
 
-                    <div class="container gap-y-2">
+                    <div class="box w-full gap-y-2">
                         <label class="text-base text-purple-700 font-semibold "> Penulis Buku</label>
                         <input
                             required
@@ -52,7 +52,7 @@
                         />
                     </div>
 
-                    <div class="container gap-y-2">
+                    <div class="box w-full gap-y-2">
                         <label class="text-base text-purple-700 font-semibold "> Tahun</label>
                         <input
                             required
@@ -62,13 +62,23 @@
                             placeholder="Masukkan Tahun Rilis Buku"
                         />
                     </div>
+                    <div class="box w-full gap-y-2">
+                        <div class="flex flex-col  w-full justify-center ">
+                            <label class="text-base text-purple-700 font-semibold "> Status membaca</label>
+                            <div class="">
+                                <input id="read-checked" type="checkbox" name="readingStatus" value="sudah" />
+                                Sudah dibaca
+                            </div>
+                        </div>
+                    </div>
 
                     <!-- Buttons -->
-                    <!-- <div class="container gap-y-2 mt-4"> -->
+                    <!-- <div class="box gap-y-2 mt-4"> -->
                     <button
+                        style="pointer-events: none"
                         type="submit"
                         id="completed-btn"
-                        class="container items-center gap-y-2 mt-4 bg-purple-700 pt-3 py-4 text-center text-white w-full cursor-pointer rounded-md hover:bg-purple-800 transition"
+                        class="box button items-center gap-y-2 mt-4 bg-gray-400 pt-3 py-4 text-center text-white w-full rounded-md hover:bg-purple-800 transition"
                     >
                         <h1>Add To Bookshelf</h1>
                     </button>
@@ -77,14 +87,14 @@
             </div>
 
             <!-- Boookshelfs -->
-            <div class="container gap-y-4 mt-8">
+            <div class="box gap-y-4 mt-8">
                 <!-- Unread Books -->
-                <div id="unread-books-container" class="container border border-purple-400 rounded-lg p-4">
+                <div id="unread-books-container" class="box border border-purple-400 rounded-lg p-4">
                     <h1 class="text-2xl font-semibold">Belum Selesai Dibaca</h1>
                 </div>
 
                 <!-- Readed Books -->
-                <div id="readed-books-container" class="container border border-purple-400 rounded-lg p-4">
+                <div id="readed-books-container" class="box border border-purple-400 rounded-lg p-4">
                     <h1 class="text-2xl font-semibold">Selesai Dibaca</h1>
                 </div>
             </div>
