fixing fetch data done

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <!-- <div class="box gap-y-2 mt-4"> -->
                     <button
                         style="pointer-events: none"
-                        type="submit"
+                        type="button"
                         id="completed-btn"
                         class="box button items-center gap-y-2 mt-4 bg-gray-400 pt-3 py-4 text-center text-white w-full rounded-md hover:bg-purple-800 transition"
                     >
