add onLoad function handler

--- a/index.html
+++ b/index.html
@@ -89,14 +89,10 @@
             <!-- Boookshelfs -->
             <div class="box gap-y-4 mt-8">
                 <!-- Unread Books -->
-                <div id="unread-books-container" class="box border border-purple-400 rounded-lg p-4">
-                    
-                </div>
+                <div id="unread-books-container" class="box border border-purple-400 rounded-lg p-4"></div>
 
                 <!-- Readed Books -->
-                <div id="readed-books-container" class="box border border-purple-400 rounded-lg p-4">
-                    
-                </div>
+                <div id="readed-books-container" class="box border border-purple-400 rounded-lg p-4"></div>
             </div>
         </div>
     </body>
