--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@
                 </form>
             </div>
 
+            <!-- Search Bar -->
+            <div class="box w-full mt-8 gap-y-2">
+                <label class="text-base text-purple-700 font-semibold text-center">Cari Buku Di sini</label>
+                <input
+                    required
+                    id="search-book"
+                    class="border border-purple-400 rounded-md input-form"
+                    type="text"
+                    placeholder="Masukkan Buku yang ingin dicari"
+                />
+                <button
+                    type="button"
+                    id="completed-btn"
+                    class="box button items-center gap-y-2 bg-purple-700 pt-3 py-4 text-center text-white w-full rounded-md hover:bg-purple-800 transition"
+                >
+                    <h1>Cari Buku</h1>
+                </button>
+            </div>
+
             <!-- Boookshelfs -->
             <div class="box gap-y-4 mt-8">
                 <!-- Unread Books -->
