--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                             placeholder="Masukkan Tahun Rilis Buku"
                         />
                     </div>
+
+                    <!-- Status -->
                     <div class="box w-full gap-y-2">
                         <div class="flex flex-col  w-full justify-center ">
                             <label class="text-base text-purple-700 font-semibold "> Status membaca</label>
@@ -108,12 +110,40 @@
             <!-- Boookshelfs -->
             <div class="box gap-y-4 mt-8">
                 <!-- Unread Books -->
-                <div id="unread-books-container" class="box border border-purple-400 rounded-lg p-4"></div>
+                <div id="unread-books-container" class="box border border-purple-400 rounded-lg p-4">
+                    <h1 class="text-2xl font-semibold">Belum Selesai Dibaca</h1>
+                </div>
 
                 <!-- Readed Books -->
                 <div id="readed-books-container" class="box border border-purple-400 rounded-lg p-4"></div>
             </div>
         </div>
+
+        <!-- Template for Unread Books -->
+        <template unread-books-template>
+            <div class="box book border border-purple-400 rounded-lg p-4 mt-3 gap-y-1">
+                <h1 unread-title class="text-xl font-medium"></h1>
+                <p unread-author></p>
+                <p unread-tahun></p>
+
+                <!-- Info -->
+                <div class="flex items-center justify-between w-full">
+                    <!-- Chips -->
+                    <div
+                        class="box whitespace-nowrap justify-center rounded-lg text-sm h-8 px-4 w-max text-center leading-5 bg-yellow-400 text-yellow-700 font-medium"
+                    >
+                        <p>Belum dibaca</p>
+                    </div>
+
+                    <div
+                        unread-delete-btn
+                        class=" h-8 px-4 text-center font-medium flex items-center cursor-pointer text-red-700 border border-red-700 rounded-lg"
+                    >
+                        <p>Hapus Buku</p>
+                    </div>
+                </div>
+            </div>
+        </template>
     </body>
     <script src="./index.js"></script>
 </html>
