search input feature done

--- a/index.html
+++ b/index.html
@@ -95,16 +95,9 @@
                     required
                     id="search-book"
                     class="border border-purple-400 rounded-md input-form"
-                    type="text"
-                    placeholder="Masukkan Buku yang ingin dicari"
+                    type="search"
+                    placeholder="Masukkan Judul Buku yang ingin dicari"
                 />
-                <button
-                    type="button"
-                    id="completed-btn"
-                    class="box button items-center gap-y-2 bg-purple-700 pt-3 py-4 text-center text-white w-full rounded-md hover:bg-purple-800 transition"
-                >
-                    <h1>Cari Buku</h1>
-                </button>
             </div>
 
             <!-- Boookshelfs -->
