preventing duplicate books

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <!-- Form Input Section-->
             <div class="box w-full  mt-6">
                 <!-- Form Input -->
-                <form oninput="formChangeHandler()" class="box w-full items-center gap-y-4">
+                <form input-form-container class="box w-full items-center gap-y-4">
                     <div class="box w-full gap-y-2">
                         <label class="text-base text-purple-700 font-semibold"> Judul Buku</label>
                         <input
                             required
-                            id="judul-buku"
+                            id="judul-buku-input"
                             class="border border-purple-400 rounded-md input-form"
                             type="text"
                             placeholder="Masukkan Judul Buku"
@@ -45,7 +45,7 @@
                         <label class="text-base text-purple-700 font-semibold "> Penulis Buku</label>
                         <input
                             required
-                            id="penulis-buku"
+                            id="penulis-buku-input"
                             class="border border-purple-400 rounded-md input-form"
                             type="text"
                             placeholder="Masukkan Penulis Buku"
@@ -56,7 +56,7 @@
                         <label class="text-base text-purple-700 font-semibold "> Tahun</label>
                         <input
                             required
-                            id="tahun-buku"
+                            id="tahun-buku-input"
                             class="border border-purple-400 rounded-md input-form"
                             type="number"
                             placeholder="Masukkan Tahun Rilis Buku"
