working on change status of all books

--- a/index.html
+++ b/index.html
@@ -127,9 +127,10 @@
                 <div class="flex items-center justify-between w-full">
                     <!-- Chips -->
                     <div
-                        class="box whitespace-nowrap justify-center rounded-lg text-sm h-8 px-4 w-max text-center leading-5 bg-yellow-400 text-yellow-700 font-medium"
+                        sudah-baca-handler
+                        class="box cursor-pointer whitespace-nowrap justify-center rounded-lg text-sm h-8 px-4 w-max text-center leading-5 bg-green-400 text-green-700 font-medium"
                     >
-                        <p>Belum dibaca</p>
+                        <p>Sudah dibaca</p>
                     </div>
 
                     <div
@@ -153,9 +154,10 @@
                 <div class="flex items-center justify-between w-full">
                     <!-- Chips -->
                     <div
-                        class="box whitespace-nowrap justify-center rounded-lg text-sm h-8 px-4 w-max text-center leading-5 bg-green-400 text-green-700 font-medium"
+                        belum-baca-handler
+                        class="box cursor-pointer whitespace-nowrap justify-center rounded-lg text-sm h-8 px-4 w-max text-center leading-5 bg-yellow-400 text-yellow-700 font-medium"
                     >
-                        <p>Sudah dibaca</p>
+                        <p>Belum dibaca</p>
                     </div>
 
                     <div
