fixing statusBaca bug done

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="flex items-center justify-between w-full">
                     <!-- Chips -->
                     <div
-                        sudah-baca-handler
+                        status-baca-handler
                         class="box cursor-pointer whitespace-nowrap justify-center rounded-lg text-sm h-8 px-4 w-max text-center leading-5 bg-green-400 text-green-700 font-medium"
                     >
                         <p>Sudah dibaca</p>
@@ -154,7 +154,7 @@
                 <div class="flex items-center justify-between w-full">
                     <!-- Chips -->
                     <div
-                        belum-baca-handler
+                        status-baca-handler
                         class="box cursor-pointer whitespace-nowrap justify-center rounded-lg text-sm h-8 px-4 w-max text-center leading-5 bg-yellow-400 text-yellow-700 font-medium"
                     >
                         <p>Belum dibaca</p>
